[package]
name = "ripm"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "Basic password manager that stores passwords in images"
documentation = "https://gitlab.com/nixon86/rip"
readme = "README.md"
homepage = "https://gitlab.com/nixon86/rip"
repository = "https://gitlab.com/nixon86/rip"
keywords = ["password", "manager"]
categories = ["command-line-utilities"]

[dependencies]
