[package]
name = "ripm"
version = "0.3.3"
edition = "2021"
license-file = "LICENSE"
description = "Basic password manager that stores passwords in images"
documentation = "https://gitlab.com/nixon86/rip"
readme = "README.md"
homepage = "https://gitlab.com/nixon86/ripm"
repository = "https://gitlab.com/nixon86/ripm"
keywords = ["password", "manager"]
categories = ["command-line-utilities"]

[dependencies]
home = "0.5.11"
sha256 = "1.6.0"
