[package]
name = "ripm"
version = "0.4.0"
edition = "2021"
license-file = "LICENSE"
description = "Basic password manager that stores passwords in images"
documentation = "https://gitlab.com/nixon86/rip"
readme = "README.md"
homepage = "https://gitlab.com/nixon86/ripm"
repository = "https://gitlab.com/nixon86/ripm"
keywords = ["password", "manager"]
categories = ["command-line-utilities"]

[dependencies]
cli-clipboard = "0.4.0"
home = "0.5.11"
iced = {version = "0.13.1", optional = true}
rpassword = {version = "7.4.0", optional = true}
sha256 = "1.6.0"

[features]
default = ["gui", "cli"]
cli = ["dep:rpassword"]
gui = ["dep:iced"]
